@@ -1,0 +1,40 @@
+Feature: Common generation
+
+
+Scenario: Common interface and implementation files generation
+  Given source declaration
+    """
+    namespace Common.Generation;
+    public static class SomeStaticClass { }
+    """
+  And attribute usage
+    """
+    using Tum4ik.StinimGen.Attributes;
+    using Common.Generation;
+    namespace Attribute.Usage;
+    [IIFor(typeof(SomeStaticClass), "SomeStaticClassWrapper")]
+    public partial interface ISomeStaticClass { }
+    """
+  When run generator
+  Then there must not be generation exception
+  And generated interface file must be
+    """
+    // <auto-generated/>
+    #nullable enable
+    namespace Attribute.Usage;
+    [global::System.CodeDom.Compiler.GeneratedCode("StinimGen", "<version>")]
+    partial interface ISomeStaticClass
+    {
+    }
+    """
+  And generated implementation file must be
+    """
+    // <auto-generated/>
+    #nullable enable
+    namespace Attribute.Usage;
+    [global::System.CodeDom.Compiler.GeneratedCode("StinimGen", "<version>")]
+    [global::System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverage]
+    internal class SomeStaticClassWrapper : ISomeStaticClass
+    {
+    }
+    """
