@@ -1,4 +1,0 @@
-namespace Tum4ik.StinimGen.Models;
-internal sealed record ImplementationInfo(
-  string WrapperClassName
-);
